erDiagram
    BRANCHES {
        int id PK
        string name
    }

    USERS {
        int id PK
        string username
        string password_hash
        string role "admin | manager"
        int branch_id FK "NULL si role=admin"
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    STOCK {
        int id PK
        int branch_id FK
        string product_id "réf. externe, pas de FK"
        int quantity "CHECK >= 0"
        datetime updated_at
    }

    BRANCHES ||--o{ USERS : "assigné à (NULL si admin)"
    BRANCHES ||--o{ STOCK : "détient"
